[tool.poetry]
name = "s4mer"
version = "0.1.0"
description = "Repo for the testing and developing of state space models, transformers and the hybrid between the two; trained on whole slide digital pathology image data."
authors = ["Bryan Gass <bryank123@live.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
maintainers = [
    "Bryan Gass <bryank123@live.com>",
]
repository = "https://github.com/Dana-Farber-AIOS/s4mer"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Framework :: Sphinx",
    "Framework :: Pytest",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.8.13"
numpy = [
    {version = "^1.23.1", platform = "linux"},
    {version = "^1.23.1", platform = "darwin"}
    ]

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
# ~~~~~ PyTorch dependencies ~~~~~
torch = [
    {platform = "darwin", url = "https://download.pytorch.org/whl/nightly/cpu/torch-1.13.0.dev20220616-cp39-none-macosx_11_0_arm64.whl"},
    {platform = "linux", version = "^1.12.0", source = "pytorch"}
    ]
#torchvision = [
#    {platform = "darwin", url = "https://download.pytorch.org/whl/nightly/cpu/torchvision-0.14.0.dev20220616-cp39-cp39-macosx_11_0_arm64.whl"},
#    {platform = "linux", version = "^0.12.0", source = "pytorch"}
#    ]
#torchaudio = [
#    {platform = "darwin", url = "https://download.pytorch.org/whl/nightly/cpu/torchaudio-0.14.0.dev20220603-cp39-cp39-macosx_11_0_arm64.whl"},
#    {platform = "linux", version = "^0.12.0", source = "pytorch"}
#    ]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.group.jax]
optional = true

[tool.poetry.group.jax.dependencies]
# ~~~~~ Jax dependencies ~~~~~
jax = [
    {extras = ["cuda"], version = "^0.3.15", platform = "linux"},
    #{extras = ["cpu"], version = "^0.3.14", platform = "darwin"}
    ]
flax = [
    {version = "^0.5.3", platform = "linux"},
    #{version = "^0.5.2", platform = "darwin", python = "~3.8"} # issue with flax installing tensorstore that isnt compatible on mac
    ]
optax = [
    {version = "^0.1.3", platform = "linux"},
    #{version = "^0.1.3", platform = "darwin"}
    ]

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
# ~~~~~ jupyter dependencies ~~~~~
notebook = [
    {version = "^6.4.12", platform = "linux"},
    {version = "^6.4.12", platform = "darwin"}
    ]
jupyter = [
    {version = "^1.0.0", platform = "linux"},
    {version = "^1.0.0", platform = "darwin"}
    ]
ipykernel = [
    {version = "^6.15.1", platform = "linux"},
    {version = "^6.15.1", platform = "darwin"}
    ]
ipython = [
    {version = "^8.4.0", platform = "linux"},
    {version = "^8.4.0", platform = "darwin"}
    ]

[tool.poetry.group.additional]
optional = true

[tool.poetry.group.additional.dependencies]
# ~~~~~ additional dependencies ~~~~~
black = [
    {version = "^22.6.0", platform = "linux"},
    {version = "^22.6.0", platform = "darwin"}
    ]
pre-commit = [
    {version = "^2.20.0", platform = "linux"},
    {version = "^2.20.0", platform = "darwin"}
    ]

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
